samples/_failures_safe/1761647911_b3fda3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60caa48f.c: In function ‘main’:
./samples/SAFE/__tmp_60caa48f.c:147:19: error: expected ‘;’ at end of input
  147 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_60caa48f.c:147:13: error: expected declaration or statement at end of input
  147 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_60caa48f.c:147:13: error: expected declaration or statement at end of input
